Q&A plugin - cross browser bugs
- some font weights do not look good in Safari - increase 200->300 &
400->500.
- scrolling inside the text area did not work well on windows -
calculate the ratio of the element to the screen and use it to get the
real delta.

--- a/modules/QnA/resources/css/qna-announcements.css
+++ b/modules/QnA/resources/css/qna-announcements.css
@@ -107,13 +107,14 @@
     float: right;
     margin-top: 2px;
 }
+
 .qnaInterface .controlBarBtn:hover {
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.8);;
 }
 
 .qnaInterface .qnaCancelButton{
-    font-weight: 200;
+    font-weight: 300;
 }
 .qnaInterface .qnaSendButton{
-    font-weight: 400;
+    font-weight: 500;
 }
