--- a/modules/QnA/resources/css/qna-threads-list.css
+++ b/modules/QnA/resources/css/qna-threads-list.css
@@ -288,7 +288,7 @@
     background-color: transparent;
     position: absolute;
     font-size: 12px;
-    font-weight: 300;
+    font-weight: 500;
     bottom: 3px;
     right: 11px;
     color: #ffffff;
